# RosaServer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  RosaServer.sln  build  build-debug.sh  build.sh
.github/workflows/: cmake.yml  codeql-analysis.yml
LuaJIT/src/: buildvm.exp  buildvm.lib  lua51.exp  lua51.lib  luajit.exp  luajit.lib  minilua.exp  minilua.lib
RosaServer/: CMakeLists.txt  RosaServer.cpp  RosaServer.h  RosaServer.vcxproj  RosaServer.vcxproj.filters  api.cpp  api.h  childprocess.cpp  childprocess.h  console.cpp  console.h  crypto.cpp  crypto.h  detours.h  detours.lib  dllmain.cpp  engine.cpp  engine.h  filewatcher.cpp  filewatcher.h  globals.cpp  hooks.cpp  hooks.h  httplib.h  image.cpp  image.h  opusencoder.cpp  opusencoder.h  pch.h  pointgraph.cpp  pointgraph.h  rosaserver.cpp  rosaserver.h  server.h  sol.hpp  sqlite.cpp  sqlite.h  structs.h  tcpserver.cpp  tcpserver.h  (+6 more)
RosaServerSatellite/: CMakeLists.txt  main.cpp
lib/sol/: config.hpp
shared/: miniz_export.h
shared/sol/: config.hpp
test/: .gitignore  config.txt  start  subrosadedicated.x64  test
test/data/: park5.sbv
test/data/test2/: city2.sbc
test/main/: init.lua
test/tests/: accounts.lua  bonds.lua  bullets.lua  chat.lua  childProcess.lua  crypto.lua  event.lua  events.lua  fileWatcher.lua  http.lua  humans.lua  image.lua  itemTypes.lua  items.lua  memory.lua  os.lua  physics.lua  players.lua  rigidBodies.lua  rotMatrix.lua  server.lua  sqlite.lua  streets.lua  vector.lua  vehicles.lua  worker.lua  worker.worker.lua  zlib.lua
